<resources>
    <string name="app_name">DnD</string>
    <string name="spells">Заклинания</string>
    <string name="skills">Умения</string>
    <string name="character">Персонаж</string>
    <string name="inventory">Инвентарь</string>
    <string name="dices">Кости</string>
    <string name="sanyapers">SanyaPers</string>
    <string name="validation_failed">Вы что-то не заполнили/заполнили не верно</string>
    <string name="app_exit">Ты отсюда не выйдешь</string>
</resources>
